--- a/discover-plug-httpstore/pom.xml
+++ b/discover-plug-httpstore/pom.xml
@@ -4,17 +4,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>plugs-root</artifactId>
-        <groupId>com.quhaodian.plugs</groupId>
+        <groupId>com.haoxuer.plugs</groupId>
         <version>1.01</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>discover_plug_httpstore</artifactId>
-    <version>1.03</version>
+    <artifactId>discover-plug-httpstore</artifactId>
+    <version>1.01</version>
 
-    <name>discover_plug_httpstore</name>
-    <!-- FIXME change it to the project's website -->
-    <url>http://www.example.com</url>
+    <name>discover-plug-httpstore</name>
+    <url>https://github.com/cng1985/plugs</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -28,9 +27,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.quhaodian.discover</groupId>
-            <artifactId>discover-plug</artifactId>
-            <version>1.8.6</version>
+            <groupId>com.haoxuer.discover</groupId>
+            <artifactId>discover-common-plug</artifactId>
+            <version>2.0.4</version>
         </dependency>
         <dependency>
             <groupId>org.jodd</groupId>
@@ -40,7 +39,7 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.4</version>
+            <version>2.8.5</version>
         </dependency>
     </dependencies>
 </project>
